@@ -180,7 +180,7 @@ if ($action == 'create')
 	print_fiche_titre($langs->trans("NewSocialContribution"));
 	print "<br>\n";
 
-	if ($mesg) print $mesg.'<br>';
+	dol_htmloutput_mesg($mesg);
 
     $var=false;
 
@@ -254,12 +254,9 @@ if ($chid > 0)
 
 		$head=tax_prepare_head($cha);
 
-		dol_fiche_head($head, 'card', $langs->trans("SocialContribution"),0,'bill');
+		print dol_get_fiche_head($head, 'card', $langs->trans("SocialContribution"),0,'bill');
 
-		/*
-		* Confirmation de la suppression de la charge
-		*
-		*/
+		// Confirmation de la suppression de la charge
 		if ($action == 'paid')
 		{
 			$text=$langs->trans('ConfirmPaySocialContribution');
