@@ -48,6 +48,11 @@ function tax_prepare_head($object)
     // $this->tabs = array('entity:-tabname:Title:@mymodule:/mymodule/mypage.php?id=__ID__');   to remove a tab
     complete_head_from_modules($conf,$langs,$object,$head,$h,'tax');
 
+	$head[$h][0] = DOL_URL_ROOT.'/compta/sociales/document.php?id='.$object->id;
+	$head[$h][1] = $langs->trans("Documents");
+	$head[$h][2] = 'documents';
+	$h++;
+
     $head[$h][0] = DOL_URL_ROOT.'/compta/sociales/info.php?id='.$object->id;
     $head[$h][1] = $langs->trans("Info");
     $head[$h][2] = 'info';
